# finetune-llm

./: .gitignore  README.md  combine_data.ipynb  finetune.py  pyproject.toml  requirements.txt  synthetic_data_generator.ipynb
