[project]
name = "finetune-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.4",
    "notebook>=7.5.5",
    "openai>=2.30.0",
    "peft>=0.18.1",
    "torch>=2.11.0",
    "transformers>=5.4.0",
    "trl>=1.0.0",
]
